tests/snapshots/examples_fixtures/type_system__failing__154_unresolved_projection_strict_e425.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/154_unresolved_projection_strict_e425.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `mystery`.

  --> examples/type_system/failing/154_unresolved_projection_strict_e425.flx:2:22
  |
2 |     let value: Int = mystery.0
  |                      ^^^^^^^

Hint:
  Define it first: let mystery = ...;
== stdout ==
<not executed>
